--- a/public/templates/settings/settings-about.html
+++ b/public/templates/settings/settings-about.html
@@ -50,7 +50,7 @@
                     <div class="euiSpacer euiSpacer--m"></div>
                 <div class="euiText euiText--medium">
                         <p>
-                                Enjoy your Wazuh experience and please don't hesitate to give us your feedback.
+                                Enjoy your EH-ISMAC experience and please don't hesitate to give us your feedback.
                     </p>
                 </div>
                 <div class="euiSpacer euiSpacer--l"></div>
